tests/golden/type_errors/function_return_type_mismatch.cd
fun bad(): number {
  return "nope";
}
